--- a/wp-content/themes/marcho/app/scss/_global.scss
+++ b/wp-content/themes/marcho/app/scss/_global.scss
@@ -1,1 +1,19 @@
-body {}
+html,
+body {
+	height: 100%;
+}
+
+body {
+	color: $default-color;
+	font-size: 16px;
+	line-height: 26px;
+	@extend %quicksand-500;
+	display: flex;
+	flex-direction: column;
+}
+
+.container {
+	max-width: 1200px;
+	margin: 0 auto;
+	padding: 0 15px;
+}
