--- a/wp-content/themes/marcho/app/scss/style.scss
+++ b/wp-content/themes/marcho/app/scss/style.scss
@@ -4,8 +4,64 @@
 @import 'libs';
 @import 'global';
 
+.header {
+    padding: 40px 0;
+    &__inner {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		flex-wrap: wrap;
+	}
+}
 
+.menu {
+    &__list {
+		display: flex;
+	}
+    &__list-item + .menu__list-item {
+        padding-left: 35px;
+    }
+    & .menu__list a {
+        color: $title-color;
+		padding: 0 2px 1px;
+		transition: all 0.3s;
+        text-transform: uppercase;
+        @extend %roboto-400;
+        &:hover {
+			color: $accent-color;
+			border-bottom: 1px solid $accent-color;
+            @extend %roboto-700;
+		}
+	}
+    & .menu__list a.active {
+        color: $accent-color;
+		border-bottom: 1px solid $accent-color;
+        @extend %roboto-700;
+    }
+}
 
+.user-nav {
+    display: flex;
+	&__link {
+		position: relative;
+	}
+	&__link + .user-nav__link {
+		padding-left: 25px;
+	}
+    &__num {
+		position: absolute;
+		width: 20px;
+		height: 20px;
+		border-radius: 50%;
+		background-color: $accent-color;
+		top: -9px;
+		right: -14px;
+		font-size: 12px;
+		color: #fff;
+		text-align: center;
+		line-height: 20px;
+	}
+}
 
 
 @import 'media';
